syntax = "proto3";
package abstractaccount.v1;

import "cosmos/auth/v1beta1/auth.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/larry0x/abstract-account/x/abstractaccount/types";

// AbstractAccount is a smart contract that is capable of initiating txs.
//
// This account type is similar to BaseAccount except for it doesn't have a
// pubkey. If a pubkey is needed, it creates and returns a new NilPubKey.
message AbstractAccount {
  option (gogoproto.goproto_getters)         = false;
  option (gogoproto.equal)                   = false;
  option (cosmos_proto.implements_interface) = "cosmos.auth.v1beta1.AccountI";

  string address        = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 account_number = 2;
  uint64 sequence       = 3;
}

// NilPubKey is the pubkey type of the AbstractAccount. Basically, it represents
// a pubkey that doesn't exist.
//
// The actual pubkey of an AbstractAccount (if it has one) is to be stored
// inside the contract, not at the SDK level. Signature verification is also
// done inside the contract, typically in the BeforeTx hook.
message NilPubKey {
  option (gogoproto.goproto_stringer) = false;

  bytes address_bytes = 1;
}
